@@ -18,6 +18,7 @@ VIDEO_QUALITY = 'kodion.video.quality'  # (int)
 VIDEO_QUALITY_ASK = 'kodion.video.quality.ask'  # (bool)
 USE_DASH = 'kodion.video.quality.mpd'  # (bool)
 MPD_QUALITY_SELECTION = 'kodion.mpd.quality.selection'  # (int)
+MPD_30FPS_LIMIT = 'kodion.mpd.limit.30'  # (bool)
 AUDIO_ONLY = 'kodion.audio_only'  # (bool)
 AGE_GATE = 'kodion.age.gate'  # (bool)
 SUBTITLE_LANGUAGE = 'kodion.subtitle.languages.num'  # (int)
